--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -65,19 +65,19 @@
                 <img src="../img/whatsAppimage2022-09-17 at 15.40.36.jpeg" alt="foto" class="galery__img">
             </div>
             <div class="galery--item">
-                <img src="../img/ovejas-thebarn.jpeg" alt="foto" class="galery__img">
+                <img src="../img/cumple-vito.jpeg" alt="foto" class="galery__img ">
             </div>
             <div class="galery--item">
-                <img src="../img/cumple-vito.jpeg" alt="foto" class="galery__img">
-
+                <img src="../img/ovejas-thebarn.jpeg" alt="foto" class="galery__img">
             </div>
+            
         </div>
     </main>
    
         
     <!---- galeria fin------>
     <!------footer inicia----->
-    <footer>
+    <footer class="footer-galeria">
         <div class="redes">
             <a href="https://www.google.com/maps/place/The+BArn+Canning/@-34.8943159,-58.5162281,15z/data=!4m5!3m4!1s0x0:0xb751d57ef97437e7!8m2!3d-34.8943159!4d-58.5162281"
                 target="_blank"><i class="fas fa-map-marker-alt"></i></a>
