--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -47,57 +47,48 @@
     </nav>
     <!---navbar fin----->
     <!-----servicios inicia---->
-    <div class="container-servicios">
-        <div class="card" style="width:300px; height:300px">
-            <img class="card-img-top" src="../img/livings.jpeg" alt="Card image" style="width:120%">
-            <div class="card-body">
-                <h4 class="card-title">Te ofrecemos</h4>
+    <div class="container">
+        <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+        <div class=img-servicio>
+        <div class="row">
+          <div class="col-6 col-sm-8 col-md-4">
+          <img class="card-img-top" src="../img/mesa.jpeg" alt="Card image"></div>
+          <div class="col-6 col-sm-8 col-md-4">
+            <img class="card-img-top" src="../img/livings.jpeg" alt="Card image"></div>
+          <div class="col-6 col-sm-8 col-md-4">
+          <img class="card-img-top" src="../img/whatsAppimage2022-09-17 at 15.35.35.jpeg" alt="Card image"></div>
+        </div>
+        </div>
+        <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+        <div class=text-servicio>
+        <div class="row">
+          <div class="col-6 col-md-4">
+          <h4 class="card-title">Nuestros servicios </h4>
                 <ul class="card-text" >
                     <li>WIFI</li>
                     <li>CLIMATIZACION</li>
                     <li>COCINA ELECTRICA</li>
                     <li>PARRILLA</li>
                 </ul>
-            </div>
-        </div>
-        <br>
-<span></span>
-        <div class="card" style="width:300px; height:300px">
-            <img class="card-img-top" src="../img/whatsAppimage2022-09-17 at 15.40.36.jpeg" alt="Card image" style="width:120%">
-            <div class="card-body">
-                <h4 class="card-title"></h4>
-                <ul class="card-text" >
-                    <li>ASADOR</li>
-                    <li>FREEZER</li>
-                    <li>HELADERA EXIBIDORA</li>
-                    <li>CAMASTROS</li>
-                </ul>
-            </div>
-        </div>
-        <div class="card" style="width:300px; height:300px">
-            <img class="card-img-top" src="../img/mesa.jpeg" alt="Card image" style="width:120%">
-            <div class="card-body">
-                <h4 class="card-title"></h4>
-                <ul class="card-text" >
-                    <li>JUEGO DE MESAS</li>
-                    <li>SILLAS</li>
-                    <li>JUEGO DE MESAS PARA NIÑOS</li>
-                    <li>AMENITIES</li>
-                </ul>
-            </div>
-        </div>
-        <div class="card" style="width:300px; height:300px">
-            <img class="card-img-top" src="../img/whatsAppimage2022-09-17 at 15.35.35.jpeg" alt="Card image" style="width:120%">
-            <div class="card-body">
-                <h4 class="card-title">Adicionales</h4>
+          </div>
+          <div class="col-6 col-md-4">
+          <ul class="card-text1">
+            <li>ASADOR</li>
+            <li>FREEZER</li>
+            <li>HELADERA EXIBIDORA</li>
+            <li>CAMASTROS</li>
+          </ul>
+          </div>
+          <div class="col-6 col-md-4">
+          <h4 class="card-title">Servicios adicionales</h4>
                 <ul class="card-text" >
                     <li>CANDY BAR</li>
                     <li>PELOTERO</li>
                     <li>INFLABLE</li>
                     <li>CALEFACTORES INDUSTRIALES</li>
-        
                 </ul>
-            </div>
+          </div>
+        </div>
         </div>
     </div>
     <!-----servicios fin------>
