--- a/pages/thebarn.html
+++ b/pages/thebarn.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=IM+Fell+Great+Primer+SC&family=Neucha&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilo.css">
     <title>The Barn Canning</title>
 </head>
@@ -52,9 +52,11 @@
         <div class="row">
             <aside class="nright col-md-6">
                 <h2>Conocenos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum fuga, delectus, praesentium corrupti nostrum modi excepturi et asperiores aliquam alias libero doloremque, ea officia cupiditate. Reprehenderit nisi suscipit repellendus porro!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti atque qui voluptatum nihil numquam fugiat doloremque quod earum sunt debitis dolor voluptate inventore reprehenderit iure id minima, mollitia modi! Nihil!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At consequuntur molestias id fugiat repudiandae tempora officia eligendi nobis error, dignissimos culpa. Soluta, officia. Illo id voluptatem, porro odit suscipit a!
+            <p> The BArn es tu nueva alternativa, pensada y diseñada para la realización de todo tipo de eventos, tanto sociales como corporativos.
+                Un lugar distinto para hacer de tu fienta, una celebración única, divertida e innolvidable.
+                Cuentamos con una excelente ubicación, modernas instalaciones y una gran versatilidad para llevar a cabo, distintos tipo de celebraciones, acordes a las últimas tendencias del mercado.
+                Nuestro amplio salón, y parque permite disfrutar del contacto con la naturalez de una manera súper armónica y relajada. 
+                
             </p></aside>
             <aside class="nleft col-md-6"></aside>
         </div>
