--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <form class="orden" action="nright col-md-3" class="nleft1 col-md-6 " target="_blank">
+                        <form action="nright col-md-3" class="nleft1 col-md-6 " target="_blank">
                             <div class="form ">
                                 <input class="formnombre" type="text" placeholder="Nombre" required name="Name">
                                 <input class="formemail" type="email" placeholder="Email" required name="Email">
