--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The BArn - Salón multieventos en Canning">
+    <meta name="keywords" content="Salón, eventos, Canning, multieventos, fiestas, cumpleaños">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilo.css">
-    <title>The Barn Canning</title>
+    <link rel="stylesheet" href="./scss/main.css">
+    <title>The BArn Canning</title>
 </head>
 
 
@@ -49,7 +51,7 @@
     <!-----jumbotron inicia---->
     <div class="jumbotron">
         <h1>El lugar de tus eventos</h1>
-  <p>Soñalo, Imaginalo...   Nosotros lo hacemos realidad</p>
+        <p>Soñalo, Imaginalo... Nosotros lo hacemos realidad</p>
     </div>
     <!-----jumbotron fin------>
     <!------footer inicia----->
