--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The BArn - Salón multieventos en Canning">
+    <meta name="keywords" content="Salón, eventos, Canning, multieventos, fiestas, cumpleaños">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../estilo.css">
-    <title>The Barn Canning</title>
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=IM+Fell+Great+Primer+SC&family=Neucha&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../scss/main.css">
+    <title>The BArn Canning</title>
 </head>
 
 
@@ -68,27 +70,27 @@
                 <div class="col-6 col-md-4">
                     <h4 class="card-title">Nuestros servicios </h4>
                     <ul class="card-text">
-                        <li>WIFI</li>
-                        <li>CLIMATIZACION</li>
-                        <li>COCINA ELECTRICA</li>
-                        <li>PARRILLA</li>
+                        <li>Wifi</li>
+                        <li>Climatización</li>
+                        <li>Cocina eléctrica</li>
+                        <li>Parrilla</li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-4">
                     <ul class="card-text1">
-                        <li>ASADOR</li>
-                        <li>FREEZER</li>
-                        <li>HELADERA EXIBIDORA</li>
-                        <li>CAMASTROS</li>
+                        <li>Asador</li>
+                        <li>Freezer</li>
+                        <li>Heladera exibidora</li>
+                        <li>Camastros</li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-4">
                     <h4 class="card-title">Servicios adicionales</h4>
                     <ul class="card-text">
-                        <li>CANDY BAR</li>
-                        <li>PELOTERO</li>
-                        <li>INFLABLE</li>
-                        <li>CALEFACTORES INDUSTRIALES</li>
+                        <li>Candy Bar</li>
+                        <li>Pelotero</li>
+                        <li>Inflable</li>
+                        <li>Calefactores inductriales</li>
                     </ul>
                 </div>
             </div>
