--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The BArn - Salón multieventos en Canning">
+    <meta name="keywords" content="Salón, eventos, Canning, multieventos, fiestas, cumpleaños">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=IM+Fell+Great+Primer+SC&family=Neucha&family=Shadows+Into+Light&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../estilo.css">
-    <title>The Barn Canning</title>
+    <link rel="stylesheet" href="../scss/main.css">
+    <title>The BArn Canning</title>
 </head>
 
 
@@ -54,14 +56,18 @@
         <div class=img-servicio>
             <div class="row">
                 <div class="col-6 col-sm-8 col-md-4">
-                    <video width="100%" height="100%" controls>
-                        <source src="../img/video1.mp4" type="video/mp4">
-                    </video>
+                    <div class="efecto">
+                        <video width="100%" height="100%" controls>
+                            <source src="../img/video1.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
                 <div class="col-6 col-sm-8 col-md-4">
-                    <video width="100%" height="100%" controls>
-                        <source src="../img/video2.mp4" type="video/mp4">
-                    </video>
+                    <div class="efecto">
+                        <video width="100%" height="100%" controls>
+                            <source src="../img/video2.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
                 <div class="col-6 col-sm-8 col-md-4">
                     <div class="card-eventos">
